--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "langchain-chroma>=1.0.0",
+    "langchain-community>=0.4.1",
+    "langchain-google-genai>=3.0.0",
     "langchain-groq>=1.0.0",
+    "langchain-text-splitters>=1.0.0",
     "langgraph>=0.6.7",
     "pip>=25.2",
     "typing>=3.10.0.0",
