--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "langchain-text-splitters>=1.0.0",
     "langgraph>=0.6.7",
     "pip>=25.2",
+    "pypdf>=6.1.3",
     "typing>=3.10.0.0",
 ]
