--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-groq>=1.0.0",
     "langchain-text-splitters>=1.0.0",
     "langgraph>=0.6.7",
+    "langgraph-cli>=0.4.7",
     "pip>=25.2",
     "pypdf>=6.1.3",
     "typing>=3.10.0.0",
